--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,12 @@ dependencies:
   flutter_riverpod: ^1.0.3
   json_annotation: ^4.4.0
   auto_route: ^3.2.2
-  freezed: ^1.1.1
-freezed_annotation: ^1.1.0
+  dio: ^4.0.4
+  connectivity_plus: ^2.2.0
+  pretty_dio_logger: ^1.1.1
+
+  freezed_annotation: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,6 +66,7 @@ dev_dependencies:
   json_serializable: ^6.1.4
   auto_route_generator: ^3.2.1
   build_runner: ^2.1.7
+  freezed: ^1.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
