--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,9 @@ dependencies:
   http: ^0.13.4
   formz: ^0.4.1
   shared_preferences: ^2.0.13
+  flutter_secure_storage: ^5.0.2
   iconsax: ^0.0.8
   google_fonts: ^2.3.1
-  google_maps_flutter: ^2.1.1
   equatable: ^2.0.3
   riverpod: ^1.0.3
   flutter_riverpod: ^1.0.3
@@ -51,7 +51,10 @@ dependencies:
   connectivity_plus: ^2.2.0
   pretty_dio_logger: ^1.1.1
 
+  flutter_svg: ^1.0.3
+
   freezed_annotation: ^1.1.0
+  lottie: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -79,7 +82,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+    - assets/images/person/
+    - assets/images/menu/
+    - assets/json/
+    - assets/icon/svg/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
