--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
 
   freezed_annotation: ^1.1.0
   lottie: ^1.2.2
-
+  flutter_screenutil: ^5.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -84,6 +84,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/logo/
     - assets/images/person/
     - assets/images/menu/
     - assets/json/
